--- a/Proeqti/Vinyll.ge/styles.css
+++ b/Proeqti/Vinyll.ge/styles.css
@@ -7,6 +7,9 @@
 
 body {
     font-family: 'BPG', sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 .container {
 	padding: 2rem;
@@ -45,9 +48,9 @@ body {
 .slider-nav {
 	display: flex;
 	column-gap: 1rem;
-	position: absolute;
+	position: relative;
 	bottom: 1.25rem;
-	left: 50%;
+	left: 98%;
 	transform: translateX(-50%);
 	z-index: 1;
 }
@@ -66,7 +69,7 @@ body {
 }
 header {
     background-color: #fff;
-    padding: 10px 0;
+    padding: 10px 0px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -180,7 +183,25 @@ header nav a:hover {
 .pagination a:hover {
     background-color: #ddd;
 }
+.text-content{
+    margin: 0 0 14.4;
+    color: #8F8F8F;
+    font-family: "BPG Banner", Sans-serif;
+    font-size: 10px;
+    font-weight: 400;
+    padding-left: 720px;
+    padding-right: 720px;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+  
+    margin-block-start: 0;
+    margin-block-end: .9rem;
 
+    unicode-bidi: isolate;
+    text-align: justify;
+    line-height: 1.5;
+}
 .footer {
     background-color: #000;
     color: #fff;
