--- a/Proeqti/Vinyll.ge/styles.css
+++ b/Proeqti/Vinyll.ge/styles.css
@@ -67,40 +67,99 @@ body {
 .slider-nav a:hover {
 	opacity: 1;
 }
+.header .logo {
+    display: flex;
+    align-items: center;
+}
+
+
+.header .logo img {
+    height: 90px; 
+    padding-left: 300px;;
+    
+    
+}
+
 header {
     background-color: #fff;
-    padding: 10px 0px;
+    padding: 10px 0;
     border-bottom: 1px solid #ddd;
+    width: 100%;
+    text-align: center; 
 }
+
 
 header nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start; 
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 20px; 
+    flex-wrap: wrap; 
 }
+
+
+.header .logo {
+    display: flex;
+    align-items: center;
+    width: auto; 
+}
+
+.header .logo img {
+    height: 50px;
+    padding-left: 0; 
+}
+
 
 header nav a {
     text-decoration: none;
     color: #000;
     margin: 0 10px;
     font-weight: 700;
+    white-space: nowrap; 
 }
 
 header nav a:hover {
     text-decoration: underline;
 }
 
+
 .search-icon {
     font-size: 1.2em;
 }
+
 
 #search {
     display: flex;
     align-items: center;
     margin-top: 14px;
+}
+
+
+@media (max-width: 768px) {
+    header nav {
+        flex-direction: column; 
+        padding: 10px 0; 
+    }
+    
+    .header.logo{
+        justify-content: center;
+        margin-bottom: 10px;
+        margin-right: 0;
+    }
+
+    .header .logo img {
+        height: 50px; 
+    }
+
+    header nav a {
+        margin: 5px 0; 
+    }
+
+    #search {
+        margin-top: 10px; 
+    }
 }
 
 .hero {
@@ -184,23 +243,21 @@ header nav a:hover {
     background-color: #ddd;
 }
 .text-content{
-    margin: 0 0 14.4;
+    margin: 0 auto;
     color: #8F8F8F;
     font-family: "BPG Banner", Sans-serif;
     font-size: 10px;
     font-weight: 400;
-    padding-left: 720px;
-    padding-right: 720px;
-    width: 100%;
+    width: 80%;
+    max-width: 1200px;
     position: relative;
     box-sizing: border-box;
-  
     margin-block-start: 0;
     margin-block-end: .9rem;
-
     unicode-bidi: isolate;
     text-align: justify;
     line-height: 1.5;
+    padding: 0 20px;
 }
 .footer {
     background-color: #000;
